ecmascript/parser/tests/test262-error-references/fail/1a62d7bb44c06bd0.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/1a62d7bb44c06bd0.js:1:12
  |
1 | function t(if) { }
  |            ^^

